--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,25 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
-  
+head
+  meta(charset='utf-8')
+  // son fundamentales pueda categorisar o posicionar en las busquedas
+  title Login en sistema
+  meta(charset='iso-8559-1')
+  // da una referencia a la busqueda
+header Login
+br
+form(enctype='text/plain' method='POST' action='index.php')
+  | Username:
+  input(type='text' name='user' placeholder='user' minlength='10' required='true')
+  br
+  br
+  |              Password:
+  input(type='password' name='direccion' placeholder='Password' minlength='10' required='true')
+  br
+  br
+  |              Correo:
+  input(type='email' name='correo' placeholder='E-mail' minlength='20' required='true')
+  br
+  br
+  button(name='button') Ingresar
